--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-
-  <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@800&display=swap" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TODO App</title>
@@ -39,7 +40,11 @@
             <div id="msg"></div>
             <br>
             <p>Marca</p>
-            <input type="text" class="form-control" name="" id="bandaInput">
+            <input type="text" class="form-control" name="" id="marcaInput">
+            <br>
+            <p>Quilometragem</p>
+            <input type="text" class="form-control" name="" id="quilometragemInput">
+            <div id="msg2"></div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -49,9 +54,9 @@
       </div>
     </form>
 
-    <h5 class="text-center my-3">Veiculo</h5>
+    <h5 class="text-center my-3">Veiculo(s)</h5>
 
-    <div id="musicas">
+    <div id="veiculos">
 
     </div>
   </div>
